# projekt

./: RayTracingInterop.sln
RayTracing/: NativeMethods.cs  RayTracing.csproj
RayTracing/native/: CMakeLists.txt  camera.h  export.cpp  rtweekend.h
RayTracingDemo/: Program.cs  RayTracingDemo.csproj
Windowing/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Viewer.cs  Windowing.csproj  app.manifest
